Asteria/force-app/main/default/objects/Equipment__c/Equipment__c.object-meta.xml
<CustomObject>
    <description>The Equipment necessary to operate a Mining Site; drills, excavators, explosives, laser guns, etc.</description>
    <label>Equipment</label>
    <nameField>
        <displayFormat>EQ-{000000}</displayFormat>
        <label>Equipment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>