Asteria/force-app/main/default/objects/Equipment__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <description>The type of Equipment that this record refers to.</description>
    <inlineHelpText>The type of Equipment that this record refers to.</inlineHelpText>
    <label>Equipment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Equipment</valueSetName>
    </valueSet>
</CustomField>