Asteria/force-app/main/default/objects/Equipment__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Quantity of specified Equipment items currently on hand.</description>
    <inlineHelpText>Quantity of specified Equipment items currently on hand.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>