Asteria/force-app/main/default/objects/Equipment__c/fields/Rig__c.field-meta.xml
<CustomField>
    <fullName>Rig__c</fullName>
    <description>The Rig where this Equipment is currently in use.</description>
    <inlineHelpText>The Rig where this Equipment is currently in use.</inlineHelpText>
    <label>Rig</label>
    <referenceTo>Rig__c</referenceTo>
    <relationshipLabel>Equipment</relationshipLabel>
    <relationshipName>Equipment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>